--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,23 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# aoc = { package = "advent_of_code", git = "https://github.com/scottschroeder/advent_of_code", branch = "master" }
+aoc = { path = "../advent_of_code", package = "advent_of_code"}
+
+clap = "2.33.3"
+anyhow = "1.0.32"
+color-backtrace = { version = "0.4" }
+# rayon = "1.5.0"
+
+
+log = "0.4"
+pretty_env_logger = "0.4"
+
+
+
+
+[profile.test]
+opt-level = 3
+
+[profile.release]
+debug = true
